--- a/assignmentart/src/Components/Navbar/Navbar.css
+++ b/assignmentart/src/Components/Navbar/Navbar.css
@@ -9,6 +9,9 @@
     display: flex; 
     justify-content: space-around;
     align-items: center;
+    box-shadow: rgba(99, 99, 99, 0.333) 0px 2px 8px 0px;
+    height: 4rem;
+    font-size: 1.2rem;
 }
 .logo-name-class-header{
   display: flex; 
@@ -33,5 +36,5 @@
     display: flex;
     justify-content: space-between;  
     gap: 2rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
