--- a/assignmentart/src/Components/LoginForm/LoginForm.css
+++ b/assignmentart/src/Components/LoginForm/LoginForm.css
@@ -31,12 +31,26 @@
     margin: 1rem;
 }
 .btn-Sigin{
-    background-color: var(--GRAY);
-    border: 1px thin solid var(--DARK-GRAY);
+   
+    border: 1px  solid var(--GRAY);
     padding: .8rem;
     color: var(--DARK-GRAY);
     border-radius: 27px;
     width: 10rem;
     margin: 1rem;
 
+}
+.signup-input{
+    border:  1px  solid var(--GRAY);
+    padding: .8rem;
+    border-radius: 27px;
+    margin: 1rem;
+  
+}
+.back-btn{
+    border: none;
+    align-items: center;
+    display: flex;
+    gap: 4px;
+    margin: 1rem;
 }
