--- a/assignmentart/src/Components/Navbar/Navbar.css
+++ b/assignmentart/src/Components/Navbar/Navbar.css
@@ -7,11 +7,18 @@
 }
 .navbar-section-nv{
     display: flex; 
-    justify-content: space-around;
+    width: 80%;
+    justify-content: center;
     align-items: center;
-    box-shadow: rgba(99, 99, 99, 0.333) 0px 2px 8px 0px;
-    height: 4rem;
-    font-size: 1.2rem;
+    margin: auto;
+    border-bottom:1px solid rgba(99, 99, 90, 0.333) ;
+    height: 7rem;
+    padding-top: 1rem;
+    font-size: 1.4rem;
+}
+.navbar-content-style{
+ display: flex;
+ justify-content: space-between;
 }
 .logo-name-class-header{
   display: flex; 
@@ -19,7 +26,7 @@
   align-items: center;
 }
 .logo-img{
-    width: 25%;
+    width: 30%;
     height: auto;
 }
 .header-logo-name{
@@ -27,14 +34,11 @@
 }
 .navbar-mid-section{
     display: flex;
-    gap: 5rem;
-   
-
-    
+    gap: 5rem;  
 }
 .navbar-icon-section{
     display: flex;
     justify-content: space-between;  
     gap: 2rem;
-    font-size: 1.5rem;
+    font-size: var(--lg);
 }
