--- a/assignmentart/src/Components/LoginForm/LoginForm.css
+++ b/assignmentart/src/Components/LoginForm/LoginForm.css
@@ -1,11 +1,12 @@
 *{
     margin: 0; padding: 0; box-sizing: border-box;
 }
-/* .Login-container-flex-flow{
-   
-      margin-left: 20rem;
+.Login-container-flex-flow{
+ max-width: 45rem;  
+ min-width: 15rem;
+    
 
-} */
+} 
 .info-container{
     margin-top: 3rem;
     font-size: var(--md);
