--- a/assignmentart/src/Components/PaymentMethod/Payment.css
+++ b/assignmentart/src/Components/PaymentMethod/Payment.css
@@ -3,11 +3,34 @@
     padding: 0;
     box-sizing: border-box;}
 
-.Payment-img-styl{
-background-color: blue;
-
+.flex-row-img{
+    display: flex;
+    gap:2rem;
+    margin-bottom: 3rem;
 }
-img{
-    width: 10%;
-    height: auto;
+.payment-style {
+    /* background-color: rgb(0, 255, 170); */
+}
+.Payment-img-styl{
+    border: 1px solid black;
+    border-radius: 27px; 
+    display: flex;
+    height: 4rem;
+    width: 12rem;
+    justify-content: center;
+    align-items: center;
+}
+.img-styl{
+    width: 4rem;
+    height: 4rem;
+}
+.margine-top{
+    margin-top: 1.5rem;
+}
+.flex{
+    display: flex;
+    gap:2rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    width: 19rem;
 }
